--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,8 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 h1 {
@@ -30,7 +32,7 @@ h1 {
 }
 
 .search-form {
-  width: 60rem;
+  width: 30rem;
   height: 10rem;
   display: flex;
   justify-content: center;
